--- a/app/views/layouts/orders.html.erb
+++ b/app/views/layouts/orders.html.erb
@@ -10,9 +10,9 @@
   </head>
 
   <body>
+  <div class="sidebar-logo"></div>
   <div id="left-sidebar">
 <ul>
-<li><div class="sidebar-logo"></div></li>
 <li><%= link_to 'Inventory', orders_path %></li>
 <li><%= link_to 'Products', products_path %></li>
 <li><%= link_to 'Libraries', libraries_path %></li>
