--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,4 +1,11 @@
 <h1>Home#index</h1>
 <p>Welcome to the MAIN inventory system.</p>
 
+<% if current_user.email %>
+    Logged in as <%= current_user.email %>.
+    <%= link_to "Log Out", logout_path %>
+<% else %>
+    <%= link_to "Sign Up", signup_path %>
+    <%= link_to "Log In", login_path %>
+<% end %>
 <p>Please log in to continue.</p>
