--- a/app/assets/stylesheets/stylesheet.css
+++ b/app/assets/stylesheets/stylesheet.css
@@ -74,6 +74,7 @@ body {
 .sum {
     border-top: 1px solid black;
     padding-top:25px;
+    padding-bottom:25px;
     background-color:whitesmoke !important;
 }
 
