added expiration to DF licenses

--- a/app/views/libraries/index.html.erb
+++ b/app/views/libraries/index.html.erb
@@ -4,7 +4,7 @@
     <%= link_to '+ Add Library', new_library_path, class: 'new' %><br><br>
     <div class="table-grid-libs">
         <div class="row-name"><strong>Library Name</strong></div>
-        <div class="row-name"><strong>DF Licenses</strong></div>
+        <div class="row-name"><strong>DF Licenses <button class="expiration">(expiring 02/06/2020)</button></strong></div>
         <div class="row-name"></div>
      </div>
 
