--- a/app/assets/stylesheets/stylesheet.css
+++ b/app/assets/stylesheets/stylesheet.css
@@ -182,6 +182,19 @@ td {
     margin-top:5%;
 }
 
+.expiration {
+    background:green;
+    width:80px;
+    border:none;
+    color:white;
+    font-weight:bold;
+    display:block;
+    margin-top:2px;
+    padding:2px;
+    border-radius:5px;
+    font-size:10px;
+}
+
 .table-grid-prods {
     display:grid;
     grid-template-columns:220px 200px 100px 50px;
